# fabrictestbed-extensions

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_docs.sh  parse_html.py  pyproject.toml  requirements.txt  setup.py  sphinx.sh  tox.ini
.claude/agents/: api-analyzer.md  architect.md  code-reviewer.md  doc-writer.md  implementer.md  migration-helper.md  performance-analyst.md  refactor-advisor.md  security-auditor.md  slice-debugger.md  test-writer.md
.claude/commands/: add-tests.md  changelog.md  commit.md  coverage.md  depcheck.md  docstring.md  example.md  explain.md  lead.md  lint.md  pr-ready.md  review.md  scaffold.md  slice-template.md  test.md
.github/workflows/: build.yml  check_docstring_coverage.yml  check_format.yml  check_signed_commits.yml  checks.yml  codeql.yml  docstrings.yml  publish.yml  release.yml  test.yml
docs/claude/: ARCHITECTURE.md  PROMPT.md  ROADMAP.md  SPEC.md  TESTING.md
docs/source/: artifact.rst  artifact_manager_ui.rst  component.rst  conf.py  fablib.rst  facility_port.rst  index.rst  interface.rst  network_service.rst  node.rst  resources.rst  site.rst  slice.rst  switch.rst  utils.rst
docs/source/modules/: component.rst  fablib.rst  interface.rst  network_service.rst
fabrictestbed_extensions/: __init__.py
fabrictestbed_extensions/cli/: cli.py  exceptions.py
fabrictestbed_extensions/editors/: abc_topology_editor.py  abs_topology_editor.py  cytoscape_topology_editor.py  geo_topology_editor.py
fabrictestbed_extensions/fablib/: __init__.py  abc_fablib.py  artifact.py  attestable_switch.py  component.py  constants.py  exceptions.py  fablib.py  fablib_old.py  fablib_v2.py  facility_port.py  facility_port_v2.py  interface.py  interface_v2.py  metrics.py  network_service.py  network_service_v2.py  node.py  node_v2.py  resources.py  resources_v2.py  site.py  slice.py  slice_old.py  slice_v2.py  socket.py  switch.py  switch_v2.py  template_mixin.py  validator.py  validator_v2.py
fabrictestbed_extensions/fablib/config/: config.py  fabric_rc  fabric_rc.yml
fabrictestbed_extensions/fablib/crease/: crinkle.py  monitor_source.c  spade_reader.py
fabrictestbed_extensions/fabvis/: __init__.py  artifact_browser.py  artifact_demo.ipynb  configure_demo.ipynb  configure_gui.py  demo_notebook.ipynb  detail_panel.py  fabvis.py  fabvis_live.ipynb  geo_visualizer.py  graph_builder.py  image_export.py  layouts.py  slice_editor.py  splitter.py  styles.py  terminal_widget.py  visualizer.py
fabrictestbed_extensions/geo_topology_editor/: fabric_gui.py
fabrictestbed_extensions/jupyter_widgets/: fabricterminal.py
fabrictestbed_extensions/mflib/: README.md  __init__.py  deprecated_mfvis.py  get_dashboard_panels.py  mflib.py  mfvis.py  mfvis2.py
fabrictestbed_extensions/tests/: abc_test.py  component_tests.py  dummy-token.json  gpu_tesla_t4_benchmark.py  hello_fabric.py  link_benchmark.py  local_network_benchmark.py  network_benchmark_tests.py  nvme_benchmark.py  test_basic.py
fabrictestbed_extensions/ui/: artifact_manager_ui.py
fabrictestbed_extensions/utils/: Utils.py  abc_utils.py  ceph_fs_utils.py  node.py  slice.py  testbed.py  utils.py
src/fabrictestbed_extensions/: __init__.py
src/fabrictestbed_extensions/editors/: cytoscape_topology_editor.py  geo_topology_editor.py
src/fabrictestbed_extensions/fablib/: component.py  fablib.py  facility_port.py  interface.py  network_service.py  node.py  resources.py  slice.py
src/fabrictestbed_extensions/tests/: test_basic.py
src/fabrictestbed_extensions/utils/: node.py  slice.py
src/fabrictestbed_fablib/: __init__.py  component.py  fablib.py  facility_port.py  interface.py  network_service.py  node.py  resources.py  slice.py
tests/: component_tests.py  network_benchmark_tests.py
tests/benchmarks/: gpu_tesla_t4_benchmark.py  link_benchmark.py  local_network_benchmark.py  network_benchmark_tests.py  nvme_benchmark.py
tests/integration/: L2_reconfig_post_reboot_tests.py  abc_test.py  component_tests.py  conftest.py  gpu_tesla_t4_benchmark.py  hello_fabric.py  link_benchmark.py  local_network_benchmark.py  test_L2_L3.py  test_L2_reconfig_post_reboot.py  test_L2_with_mflib.py  test_bastion_ssh.py  test_compute_images.py  test_compute_multinode.py  test_error_handling.py  test_fablib.py  test_fablib_node.py  test_fabnetv4_ext.py  test_find_resource_slot.py  test_hello_fabric.py  test_lifecycle_modify.py  test_lifecycle_renew.py  test_lifecycle_states.py  test_list_resources.py  test_modify.py  test_network_fabnetv4.py  test_network_l2bridge.py  test_smoke.py  tests_L2_reconfig_post_reboot.py
tests/integration/helpers/: resource_checker.py  slice_naming.py
tests/unit/: test_basic.py  test_ceph_fs.py  test_config.py  test_constants.py  test_deprecations.py  test_facility_port.py  test_find_resource_slot.py  test_interface_ip.py  test_resources_calendar.py  test_slice_properties.py  test_template_mixin.py  test_utils.py  test_validator.py
tests/unit/data/: dsa.pub  ecdsa.pub  id_dsa  id_dsa.pub  id_ecdsa  id_ecdsa.pub  id_rsa  id_rsa.pub  rsa  rsa.pub
