[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabrictestbed_extensions"
version = "2.0.3"
description = "FABRIC Python Client Library and CLI Extensions"
authors = [
  { name = "Paul Ruth", email = "pruth@renci.org" },
  { name = "Komal Thareja", email = "kthare10@renci.org" },
]

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "ipycytoscape",
    "ipywidgets",
    "ipyleaflet",
    "tabulate",
    "fabrictestbed==2.0.7",
    "paramiko",
    "jinja2>=3.0.0",
    "pandas",
    "ipython>=8.12.0",
    "fabric_fss_utils>=1.6.1",
    "atomicwrites",
    "fabric_paramiko_expect",
    "fabric_ceph_client==1.0.2",
    "click>=8.0"
    ]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
fabric-cli = "fabrictestbed_extensions.cli.cli:cli"

[project.urls]
Homepage = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/fabrictestbed-extensions"
Documentation = "https://fabric-fablib.readthedocs.io/"
ChangeLog = "https://github.com/fabric-testbed/fabrictestbed-extensions/blob/main/CHANGELOG.md"

[project.optional-dependencies]
doc = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "furo",
]
test = [
  "black==24.*",
  "isort==5.*",
  "tox==4.*",
  "pytest",
  "pytest-xdist",
  "pytest-timeout",
  "coverage[toml]"
]

[tool.coverage.run]
branch = true
omit = ["fabrictestbed_extensions/tests/*"]

[tool.isort]
profile = "black"
src_paths = ["fabrictestbed_extensions", "docs/source/conf.py", "tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
# By default, run only unit tests when pytest is invoked.  Integration
# tests will require some manual setup (namely token acquisition), and
# thus we can't run them on CI.
testpaths = ["tests/unit/"]
markers = [
  "smoke: P0 smoke tests - basic connectivity and single-node lifecycle",
  "network: P1 network tests - L2Bridge, L2PTP, L2STS, FABNet",
  "compute: P1 compute tests - multi-node, parallel SSH, images",
  "lifecycle: P1 lifecycle tests - modify, renew, delete, state transitions",
  "error: P1 error handling tests - bad inputs, timeouts",
  "storage: P2 storage tests - CephFS mount and read/write",
  "component: P2 component tests - GPU, SmartNIC, FPGA, NVMe",
  "p0: Priority 0 - must pass",
  "p1: Priority 1 - important",
  "p2: Priority 2 - nice to have",
  "slow: Tests that take more than 10 minutes",
  "gpu: Tests requiring GPU resources",
  "smartnic: Tests requiring SmartNIC resources",
  "fpga: Tests requiring FPGA resources",
  "nvme: Tests requiring NVMe resources",
  "cephfs: Tests requiring CephFS storage",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-private = true
ignore-semiprivate = true
omit-covered-files = true
verbose = 0
fail-under = 92.6
exclude = ["tests", "fabrictestbed_extensions/editors"]
